Crash in [@ mozilla::a11y::GeckoTextMarker::ContainerAsHyperTextWrap]
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox83 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | fixed |
People
(Reporter: aryx, Assigned: eeejay)
References
(Regression)
Details
(Keywords: crash, regression, Whiteboard: [Mac2020_2])
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/75f8e66b-f5f7-42d2-b32b-a45a40201123
Reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
Top 10 frames of crashing thread:
0 XUL mozilla::a11y::GeckoTextMarker::ContainerAsHyperTextWrap const accessible/mac/GeckoTextMarker.h:57
1 XUL mozilla::a11y::GeckoTextMarkerRange::Length const accessible/mac/GeckoTextMarker.mm:401
2 XUL -[mozTextAccessible moxSelectedTextRange] accessible/mac/mozTextAccessible.mm:179
3 XUL -[MOXAccessibleBase accessibilityAttributeValue:] accessible/mac/MOXAccessibleBase.mm:139
4 AppKit NSAccessibilityGetObjectForAttributeUsingLegacyAPI
5 AppKit ___NSAccessibilityEntryPointValueForAttribute_block_invoke.805
6 AppKit NSAccessibilityPerformEntryPointObject
7 AppKit _NSAccessibilityEntryPointValueForAttribute
8 AppKit -[NSObject _accessibilityValueForAttribute:clientError:]
9 AppKit CopyAppKitUIElementAttributeValueNoCatch
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
|
||
The normalize function was putting the current container/offset past the end boundary. This caused overruns with getting the text for the range of the input object, and some unexpected invalid ranges.
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
Comment 4•4 years ago
|
||
| bugherder | ||
Comment 5•4 years ago
|
||
[@ mozilla::a11y::GeckoTextMarker::ContainerAsHyperTextWrap] - Firefox 85.0 Crash Report - Report ID: a2f2fb61-bcdc-4d33-b8d4-37c650210129
https://crash-stats.mozilla.org/report/index/a2f2fb61-bcdc-4d33-b8d4-37c650210129
Comment 6•4 years ago
|
||
(In reply to Cosmin Sabou [:CosminS] from comment #4)
[@ mozilla::a11y::GeckoTextMarker::ContainerAsHyperTextWrap] - Firefox 85.0 Crash Report - Report ID: a2f2fb61-bcdc-4d33-b8d4-37c650210129
https://crash-stats.mozilla.org/report/index/a2f2fb61-bcdc-4d33-b8d4-37c650210129
Description
•