Bug 1679075 - Don't go past empty input field in HyperTextIterator::Next. r=morgan

The normalize function was putting the current container/offset past the end boundary. This caused overruns with getting the text for the range of the input object, and some unexpected invalid ranges.

Differential Revision: https://phabricator.services.mozilla.com/D98236